WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155894
bmalloc: Renamed LargeChunk => Chunk
https://bugs.webkit.org/show_bug.cgi?id=155894
Summary
bmalloc: Renamed LargeChunk => Chunk
Geoffrey Garen
Reported
2016-03-25 11:13:41 PDT
bmalloc: Renamed LargeChunk => Chunk
Attachments
Patch
(43.69 KB, patch)
2016-03-25 11:17 PDT
,
Geoffrey Garen
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-03-25 11:17:17 PDT
Created
attachment 274920
[details]
Patch
Michael Saboff
Comment 2
2016-03-25 11:18:55 PDT
Comment on
attachment 274920
[details]
Patch r=me
Geoffrey Garen
Comment 3
2016-03-25 11:32:10 PDT
Committed
r198679
: <
http://trac.webkit.org/changeset/198679
>
Ryan Haddad
Comment 4
2016-03-25 13:30:57 PDT
Reverted
r198679
for reason: This change caused flaky LayoutTest crashes Committed
r198686
: <
http://trac.webkit.org/changeset/198686
>
Ryan Haddad
Comment 5
2016-03-25 13:31:38 PDT
***
Bug 155900
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug